crash when library override is applied to an object #89963

Closed
opened 2021-07-19 16:46:03 +02:00 by Marcin Twarowski · 8 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.11

Blender Version
Broken:
2.93.1, branch: master, commit date: 2021-06-22 05:57, hash: 1b8d33b18c
2.93.2 Release Candidate, branch: master, commit date: 2021-07-07 05:52, hash: 9e64fd461a
3.0.0 Alpha, branch: master, commit date: 2021-07-18 23:24, hash: 83883ae66a

Exact steps for others to reproduce the error

  • Start a new scene.
  • Link the Scene from file_01.blend to a new scene (File -> Link -> file_01.blend ->Scene ->Scene)
  • Select the linked scene:
    obraz.png
  • In the outliner select the cube and go to: ID data > Make Library Override Hierarchy
    obraz.png
  • Save the new file.
  • Revert or reopen the new file.
  • Crash.

Test File:
file_01.blend

	blender.exe!BLI_findptr(const ListBase * listbase, const void * ptr, const int offset) Line 749
 	blender.exe!BKE_collection_has_object(Collection * collection, const Object * ob) Line 953	
 	blender.exe!BKE_collection_object_find(Main * bmain, Scene * scene, Collection * collection, Object * ob) Line 1001	
 	blender.exe!lib_override_linked_group_tag(LibOverrideGroupTagData * data) Line 641
 	blender.exe!BKE_lib_override_library_resync(Main * bmain, Scene * scene, ViewLayer * view_layer, ID * id_root, Collection * override_resync_residual_storage, const bool do_hierarchy_enforce, const bool do_post_process, BlendFileReadReport * reports) Line 1031
 	blender.exe!lib_override_library_main_resync_on_library_indirect_level(Main * bmain, Scene * scene, ViewLayer * view_layer, Collection * override_resync_residual_storage, const int library_indirect_level, BlendFileReadReport * reports) Line 1605
 	blender.exe!BKE_lib_override_library_main_resync(Main * bmain, Scene * scene, ViewLayer * view_layer, BlendFileReadReport * reports) Line 1734	
 	blender.exe!setup_app_data(bContext * C, BlendFileData * bfd, const BlendFileReadParams * params, BlendFileReadReport * reports) Line 409
 	blender.exe!setup_app_blend_file_data(bContext * C, BlendFileData * bfd, const BlendFileReadParams * params, BlendFileReadReport * reports) Line 428
 	blender.exe!BKE_blendfile_read_setup_ex(bContext * C, BlendFileData * bfd, const BlendFileReadParams * params, BlendFileReadReport * reports, const bool startup_update_defaults, const unsigned char * startup_app_template) Line 465	
 	blender.exe!BKE_blendfile_read_setup(bContext * C, BlendFileData * bfd, const BlendFileReadParams * params, BlendFileReadReport * reports) Line 474
 	blender.exe!WM_file_read(bContext * C, const unsigned char * filepath, ReportList * reports) Line 877
 	blender.exe!wm_file_read_opwrap(bContext * C, const unsigned char * filepath, ReportList * reports) Line 2353
 	blender.exe!wm_open_mainfile__open(bContext * C, wmOperator * op) Line 2475
 	blender.exe!wm_open_mainfile_exec(bContext * C, wmOperator * op) Line 2510	
 	blender.exe!wm_handler_fileselect_do(bContext * C, ListBase * handlers, wmEventHandler_Op * handler, int val) Line 2365
 	blender.exe!wm_handler_fileselect_call(bContext * C, ListBase * handlers, wmEventHandler_Op * handler, const wmEvent * event) Line 2464
 	blender.exe!wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Line 2907
 	blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 2959
 	blender.exe!wm_event_do_handlers(bContext * C) Line 3379
 	blender.exe!WM_main(bContext * C) Line 650
 	blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 562
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.11 **Blender Version** Broken: 2.93.1, branch: master, commit date: 2021-06-22 05:57, hash: `1b8d33b18c` 2.93.2 Release Candidate, branch: master, commit date: 2021-07-07 05:52, hash: `9e64fd461a` 3.0.0 Alpha, branch: master, commit date: 2021-07-18 23:24, hash: `83883ae66a` **Exact steps for others to reproduce the error** - Start a new scene. - Link the **Scene** from **file_01.blend** to a new scene (`File -> Link -> file_01.blend ->Scene ->Scene`) - Select the linked scene: ![obraz.png](https://archive.blender.org/developer/F10228130/obraz.png) - In the outliner select the cube and go to: ID data > Make Library Override Hierarchy ![obraz.png](https://archive.blender.org/developer/F10228132/obraz.png) - Save the new file. - Revert or reopen the new file. - Crash. Test File: [file_01.blend](https://archive.blender.org/developer/F10228126/file_01.blend) ``` blender.exe!BLI_findptr(const ListBase * listbase, const void * ptr, const int offset) Line 749 blender.exe!BKE_collection_has_object(Collection * collection, const Object * ob) Line 953 blender.exe!BKE_collection_object_find(Main * bmain, Scene * scene, Collection * collection, Object * ob) Line 1001 blender.exe!lib_override_linked_group_tag(LibOverrideGroupTagData * data) Line 641 blender.exe!BKE_lib_override_library_resync(Main * bmain, Scene * scene, ViewLayer * view_layer, ID * id_root, Collection * override_resync_residual_storage, const bool do_hierarchy_enforce, const bool do_post_process, BlendFileReadReport * reports) Line 1031 blender.exe!lib_override_library_main_resync_on_library_indirect_level(Main * bmain, Scene * scene, ViewLayer * view_layer, Collection * override_resync_residual_storage, const int library_indirect_level, BlendFileReadReport * reports) Line 1605 blender.exe!BKE_lib_override_library_main_resync(Main * bmain, Scene * scene, ViewLayer * view_layer, BlendFileReadReport * reports) Line 1734 blender.exe!setup_app_data(bContext * C, BlendFileData * bfd, const BlendFileReadParams * params, BlendFileReadReport * reports) Line 409 blender.exe!setup_app_blend_file_data(bContext * C, BlendFileData * bfd, const BlendFileReadParams * params, BlendFileReadReport * reports) Line 428 blender.exe!BKE_blendfile_read_setup_ex(bContext * C, BlendFileData * bfd, const BlendFileReadParams * params, BlendFileReadReport * reports, const bool startup_update_defaults, const unsigned char * startup_app_template) Line 465 blender.exe!BKE_blendfile_read_setup(bContext * C, BlendFileData * bfd, const BlendFileReadParams * params, BlendFileReadReport * reports) Line 474 blender.exe!WM_file_read(bContext * C, const unsigned char * filepath, ReportList * reports) Line 877 blender.exe!wm_file_read_opwrap(bContext * C, const unsigned char * filepath, ReportList * reports) Line 2353 blender.exe!wm_open_mainfile__open(bContext * C, wmOperator * op) Line 2475 blender.exe!wm_open_mainfile_exec(bContext * C, wmOperator * op) Line 2510 blender.exe!wm_handler_fileselect_do(bContext * C, ListBase * handlers, wmEventHandler_Op * handler, int val) Line 2365 blender.exe!wm_handler_fileselect_call(bContext * C, ListBase * handlers, wmEventHandler_Op * handler, const wmEvent * event) Line 2464 blender.exe!wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Line 2907 blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 2959 blender.exe!wm_event_do_handlers(bContext * C) Line 3379 blender.exe!WM_main(bContext * C) Line 650 blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 562 ```

Added subscriber: @MarcinTwarowski

Added subscriber: @MarcinTwarowski
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm the crash.
#89963.crash.txt

Can confirm the crash. [#89963.crash.txt](https://archive.blender.org/developer/F10228674/T89963.crash.txt)

Added subscriber: @mont29

Added subscriber: @mont29

The problem here is overriding of scene, this is not really supported (yet hard to prevent fully in the UI, unfortunately...).

I will fix the crash itself, but properly supporting overrides of scenes remains a known TODO.

The problem here is overriding of scene, this is not really supported (yet hard to prevent fully in the UI, unfortunately...). I will fix the crash itself, but properly supporting overrides of scenes remains a known TODO.

This issue was referenced by 720ea8a67d

This issue was referenced by 720ea8a67df06ba2242e7771b349cefd753f7ea5

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2021-08-05 15:34:50 +02:00
Thomas Dinges added this to the 3.0 milestone 2023-02-08 15:59:05 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#89963
No description provided.