Fix T89963: crash when library override is applied to an object from a linked scene.

LibOverride of scenes is not really supported currently, there are many
issues with it.

Will disable most user-accessible ways to create such overrides in a
following commit.